08.9.2000	History improved <garetxe@users.sourceforge.net>

	* glade/zapping.glade: txtcontrols redesigned, now it only shows
	the visited pages, not page + subpage. For using both, a tree
	would be better. Added a 'Freeze' button.
	* src/zvbi.c: Added a web-browser-like history, and a visited
	pages list. It's easier to navigate now.

07.9.2000	History implemented <garetxe@users.sourceforge.net>

	* src/txtcontrols.c: Previous, next work for pages and subpages,
	history is saved when setting pages.

06.9.2000	VBI integrated <garetxe@users.sourceforge.net>

	* glade/zapping.glade: VBI has been integrated into the GUI.
	* src/callbacks.c: Added code for switching to VBI
	* src/zvbi.c: Much less CPU usage (pre-rendered frames, draw only
	when neccessary)
	* pixmaps/vt_loading*: Two images (~11K) created for when the
	requested page isn't available.
	* src/channel_editor.c: Uses VBI for getting the station names.
	* src/main.c: Added config setting for saving the VBI state.
	* src/txtcontrols.c: Created, manages the VBI GUI.

05.9.2000	Bpp fixes <garetxe@users.sourceforge.net>

	* zapping_setup_fb: Now accepts command line --bpp option
	* src/zvbi.c: Does most of the work. Fetches, renders and scales
	automagically teletext pages. Depends on GdkPixbuf to work.
	* src/properties.c: Now the VBI properties are modificable.

04.9.2000	Bug fixes <garetxe@users.sourceforge.net>

	* src/tveng[12].c: Fixes in the fullscreen mode, it had errors
	related to non-functional DGA drivers. Now most of the
	functionality goes into the VidMode extension, that usually works.

03.9.2000	Project structure changes <garetxe@users.sourceforge.net>

	* libvbi/: It's a bit cleaner now, and commited to CVS
	* src/zvbi.c: Gets the date and the name on each header/xpacket
	* configure.in: Not having -lpng is not longer fatal, conditional
	plugin build, [optional] GdkPixbuf support added (i will need it
	for the VBI plugin)

01.9.2000	VBI support added <garetxe@users.sourceforge.net>
