@@ -2,10 +2,9 @@ Outstanding issues for the next release
 ---------------------------------------
 	+ xscreensaver-command -throttle
 	+ sed s/videotext/teletext/g
-	+ Add "hot areas"
+	+ Add bpp option
 	> Release 0.5.3
 	+ Write the mpeg plugin (this is a MUST)
-	+ Make the 'freeze' teletext button work.
 	+ Bug fixes
 	> Release 0.5.4
 	+ Subtitles support
