@@ -134,8 +134,6 @@ gchar *s = N_("Next page");
 gchar *s = N_("Previous history entry");
 gchar *s = N_("Next history entry");
 gchar *s = N_("Previous page");
-gchar *s = N_("Stop refreshing this page");
-gchar *s = N_("Freeze");
 gchar *s = N_("Visit:");
 gchar *s = N_("Page");
 gchar *s = N_("Subpage, -1 for looking to all subpages");
