@@ -2610,34 +2610,6 @@ in the next release of this program.</label>
 	    <yfill>False</yfill>
 	  </child>
 	</widget>
-
-	<widget>
-	  <class>GtkToggleButton</class>
-	  <name>freeze_page</name>
-	  <tooltip>Stop refreshing this page</tooltip>
-	  <can_focus>True</can_focus>
-	  <signal>
-	    <name>toggled</name>
-	    <handler>on_freeze_page_toggled</handler>
-	    <last_modification_time>Fri, 08 Sep 2000 14:00:45 GMT</last_modification_time>
-	  </signal>
-	  <label>Freeze</label>
-	  <active>False</active>
-	  <child>
-	    <left_attach>1</left_attach>
-	    <right_attach>2</right_attach>
-	    <top_attach>1</top_attach>
-	    <bottom_attach>2</bottom_attach>
-	    <xpad>0</xpad>
-	    <ypad>0</ypad>
-	    <xexpand>False</xexpand>
-	    <yexpand>False</yexpand>
-	    <xshrink>False</xshrink>
-	    <yshrink>False</yshrink>
-	    <xfill>False</xfill>
-	    <yfill>False</yfill>
-	  </child>
-	</widget>
       </widget>
     </widget>
 
